// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GifGrid /> unit tests Should render a <GifGrid /> component successfully 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    Dragon Ball Z
     
  </h3>
  <p>
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`<GifGrid /> unit tests Should return items when the images are loaded useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    Dragon Ball Z
     
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="12345"
      key="12345"
      title="Someting"
      url="https://127.0.0.1/something.gif"
    />
    <GifGridItem
      id="67890"
      key="67890"
      title="Someting 2"
      url="https://127.0.0.1/something2.gif"
    />
  </div>
</Fragment>
`;
